objects/Employee__c.object
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>EmpId__c</fullName>
        <displayFormat>Emp-{000}</displayFormat>
        <label>EmpId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>